[tool.poetry]
name = "plonkathon"
version = "0.1.0"
description = "A simple Python implementation of PLONK adapted from py_plonk"
authors = ["0xPARC / Vitalik Buterin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
py-ecc = "^6.0.0"
pycryptodome = "^3.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
explicit_package_bases = true